--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
+import TestComponent from "../components/TestComponent";
 ---
 
 <Layout>
   <Welcome />
+  <TestComponent client:load />
 </Layout>
