chore: fix issue with build

--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -4,5 +4,5 @@ import RegisterForm from "../components/auth/RegisterForm.astro";
 ---
 
 <Layout title="Register | Flashcards App">
-  <RegisterForm client:load />
+  <RegisterForm />
 </Layout>
