--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -4,5 +4,5 @@ import LoginForm from "../components/auth/LoginForm.astro";
 ---
 
 <Layout title="Login | Flashcards App">
-  <LoginForm client:load />
+  <LoginForm />
 </Layout>
