--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,10 +6,10 @@ interface Props {
   title?: string;
 }
 
-const { title = "10x Astro Starter" } = Astro.props;
+const { title = "10xDevs - Nauka z fiszkami" } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
@@ -17,7 +17,7 @@ const { title = "10x Astro Starter" } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>10xDevs - Nauka z fiszkami</title>
+    <title>{title}</title>
   </head>
   <body>
     <slot />
